--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <title>Curriculo</title>
 </head> 
 </html>
-<body>
-    <h2>Sara Dantas Spindola Lopes
+<body style="background-color:rgb(211, 243, 174);"></body>
+
+    <p></p><h2>Sara Dantas Spindola Lopes</h2>
         
     </p><h3></h3>End:Rua José Borges,250 casa 02 ap 202–Barro Vermelho São Gonçalo RJ Cep:24415-225</</h3>
 
